# gstreamer

subprojects/gst-plugins-bad/ext/faac/: meson.build
